Fix UI overflow

--- a/src/global/app.css
+++ b/src/global/app.css
@@ -39,3 +39,7 @@
   font-size: 1.5em;
   white-space: normal;
 }
+
+.button-inner {
+  white-space: normal;
+}
